# django-api-template

./: README.md  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  pyproject.toml
backend/app/account/: urls.py
backend/app/account/admin/: __init__.py  user_admin.py
backend/app/account/management/commands/: __init__.py
backend/app/account/migrations/: 0001_initial.py
backend/app/account/models/: __init__.py  user.py
backend/app/account/serializers/: __init__.py  user_serializer.py
backend/app/account/tasks/: __init__.py
backend/app/core/: constants.py  logger.py  settings.py  urls.py
backend/app/core/mixins/: __init__.py
backend/app/core/mixins/admin/: __init__.py  base_admin.py
backend/app/core/mixins/models/: __init__.py  base_model.py
backend/app/core/mixins/serializers/: __init__.py  base_model_serializer.py
backend/app/core/mixins/tests/: __init__.py  base_api_test_case.py  base_test_case.py
backend/app/core/mixins/views/: base_model_viewset.py
backend/app/product/: urls.py
backend/app/product/admin/: __init__.py  product_admin.py
backend/app/product/filters/: __init__.py  product_filter.py
backend/app/product/migrations/: 0001_initial.py
backend/app/product/models/: __init__.py  product.py
backend/app/product/serializers/: __init__.py  product_serializer.py
backend/app/product/tests/views/: test_product_viewset.py
backend/app/product/views/: __init__.py
backend/scripts/: entrypoint.sh
nginx/: nginx.conf
